# send_cell

./: Cargo.toml  LICENSE-MIT.md  NOTICE  README.md  new.txt  old.txt
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yaml
src/: lib.rs  send_cell.rs  sync_cell.rs  sys.rs  unsafe_send_cell.rs  unsafe_sync_cell.rs
